[tool.poetry]
name = "bemaniutils"
version = "0.1.0"
description = ""
authors = ["j1nxie <rylieeeeexd@gmail.com>"]
license = "Unlicense"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
cython = "^3.0.10"
sqlalchemy = "<2.0.0"
alembic = "^1.13.1"
pyyaml = "^6.0.1"
flask = "^3.0.3"
requests = "^2.31.0"
mysqlclient = "^2.2.4"
passlib = "^1.7.4"
typed-ast = "^1.5.5"
freezegun = "^1.5.0"
pyreact = "^0.6.0"
flask-caching = "^2.2.0"
blinker = "^1.8.1"
pycryptodome = "^3.20.0"
jaconv = "^0.3.4"
pefile = "^2023.2.7"
pillow = "^10.3.0"
discord-webhook = "^1.3.1"
iced-x86 = "^1.21.0"
pylibmc = [
    {version = "^1.6.3", platform = "linux"},
    {version = "^1.6.3", platform = "darwin"},
]


[tool.poetry.group.dev.dependencies]
typing-extensions = "^4.11.0"
types-python-dateutil = "^2.9.0.20240316"
types-requests = "^2.31.0.20240406"
types-pyyaml = "^6.0.12.20240311"
types-werkzeug = "^1.0.9"
types-flask = "^1.1.6"
types-freezegun = "^1.1.10"
ruff = "^0.4.3"
basedpyright = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
